@@ -4,25 +4,33 @@ import com.googlecode.lanterna.gui2.Window;
 import tgpr.framework.Controller;
 import tgpr.framework.Error;
 import tgpr.framework.ErrorList;
-import tgpr.tricount.model.Repartition;
-import tgpr.tricount.model.Template;
-import tgpr.tricount.model.TemplateItem;
-import tgpr.tricount.model.Tricount;
+import tgpr.tricount.model.*;
 import tgpr.tricount.view.AddTemplateView;
 
 import java.util.List;
+import java.util.regex.Pattern;
 
 public class AddTemplateController extends Controller {
     private List<Repartition> repartitions;
+    private Template template;
+    private AddTemplateView view;
     int tricountId;
-    public AddTemplateController(List<Repartition> repartitions, int tricountId) {
+
+    public AddTemplateController(List<Repartition> repartitions, int tricountId,Template template) {
         this.repartitions = repartitions;
         this.tricountId = tricountId;
+        this.template = template;
+
     }
-    public static Error isValidTitle(String title) {
-        if (title != null && !title.trim().isEmpty())
-            return Error.NOERROR;
-        return new Error("Title is required", Template.Fields.Title);
+    public  Error isValidTitle(String title) {
+        if(title == null || title.isBlank())
+            return new Error("Title required", Template.Fields.Title);
+        if(Template.getByTitle(tricountId, title) != null)
+            return new Error("not available", Template.Fields.Title);
+        if(!Pattern.matches("^[A-Za-z0-9\\s]{3,256}", title))
+            return new Error("minimum 3 chars", Template.Fields.Title);
+
+        return Error.NOERROR;
     }
     public ErrorList validate(String title) {
         var errors = new ErrorList();
@@ -31,21 +39,29 @@ public class AddTemplateController extends Controller {
     }
     public void create(String title){
         var error = isValidTitle(title);
-        Template template = new Template(title, tricountId);
-        if(error == Error.NOERROR)
+        if(error == Error.NOERROR){
+            if(template==null)
+                template = new Template(title,tricountId);
+            else
+                template.setTitle(title);
             template.save();
+        }
         else
             showError(error);
-        for (var rep: repartitions) {
-            TemplateItem templateItem = new TemplateItem();
-            templateItem.setUserId(rep.getUserId());
-            templateItem.setWeight(rep.getWeight());
-            templateItem.setTemplateId(template.getId());
-            templateItem.save();
+        if (repartitions != null) {
+
+            for (var rep : repartitions) {
+                TemplateItem templateItem = new TemplateItem();
+                templateItem.setUserId(rep.getUserId());
+                templateItem.setWeight(rep.getWeight());
+                templateItem.setTemplateId(template.getId());
+                templateItem.save();
+            }
         }
     }
     @Override
     public Window getView() {
-        return new AddTemplateView(this);
+        return new AddTemplateView(this,template);
     }
+
 }
